--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,6 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+# 支持真彩色
+set -g default-terminal screen-256color
+set-option -ga terminal-overrides ",*256col*:Tc"
